fix nav collapsed menu and some small details in nav, beautified html and css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /* ---------------- Container ----------------------------- */
 .article {
   padding-left: 24px;
@@ -7,8 +5,6 @@
 }
 
 .row {
-  display: flex;
-  flex-wrap: wrap;
   margin-right: -12px;
   margin-left: -12px;
 }
@@ -18,33 +14,30 @@
     max-width: 1080px;
   }
 }
+
 /* ----- dropdown menu ------ */
-
 @media (max-width: 991.98px) {
-  .navbar-nav {
-     position: absolute;
-     width: 500px;
-     height: 500px;
-     background-color: #fff;
-     z-index: 9999;
-     cursor: default;
-     font-size: 18px;
-     line-height: 1.66667;
-     color: #484848;
-     padding: 80px 24px 24px;
-     overflow: auto;
-   }
-   .menu_item {
-     display: block;
-     color: #484848;
-     text-align: left;
-   }
+  #navbarNavDropdown {
+    position: fixed;
+    top: 76px;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    cursor: default;
+    line-height: 1.66667;
+    overflow: auto;
+    z-index: 1;
+    padding: 20px 0;
+  }
 
+  .menu_item {
+    display: block;
+    color: #484848;
+    text-align: center;
+  }
 }
 
-
 /* ----------------- header Nav bar--------------- */
-
 .page_header {
   position: relative;
   height: 76px;
@@ -56,23 +49,20 @@
 .heading_logo {
   height: 34px;
   width: 32px;
-  float: left;
-  margin-top: 21px;
   margin-right: 24px;
   background-image: url(./images/iconfinder_11_Airbnb_logo_logos_4373300.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 38px auto;
+  vertical-align: middle;
 }
 
 .site_heading {
   font-size: 16px;
   line-height: 1.375;
-  float: left;
-  display: block;
-  margin-top: 15px;
-  padding: 12px 0;
+  margin-top: 4px;
   color: #484848;
+  vertical-align: middle;
 }
 
 h2 {
@@ -81,47 +71,38 @@ h2 {
 }
 
 .navbar-toggler {
-  margin-top: 12px;
   font-size: 16px;
 }
 
-
 .header_menu_nav {
-  margin-top: 30px;
-  margin-left: 40px;
   padding: 12px 0;
   color: #484848;
   font-size: 16px;
 }
 
-
 .menu_item {
   display: block;
   color: #484848;
-  align-items: center;
-  text-align: center;
 }
 
-
 .menu_text {
+  padding-top: 5px;
   margin-right: 30px;
 }
 
 .menu_globe {
   margin-right: 5px;
-  margin-left: 50px;
   margin-top: 5px;
 }
-
 
 .fa-chevron-down {
   margin-left: 10px;
 }
 
 .scrollable-menu {
-    height: auto;
-    max-height: 500px;
-    overflow-x: hidden;
+  height: auto;
+  max-height: 500px;
+  overflow-x: hidden;
 }
 
 .text-indented {
@@ -129,12 +110,11 @@ h2 {
 }
 
 .menu_search {
-  margin-left: 50px;
+  margin-top: 8px;
   margin-right: 30px;
 }
 
 /* ------------ first section ------------------ */
-
 @media (min-width: 697px) {
   .first_section {
     margin-bottom: 64px;
@@ -187,6 +167,7 @@ time, .article_tag {
     padding-top: 64px;
     border-top: 1px solid #ebebeb;
   }
+
   .left_article, .center_article {
     border-right: 1px solid #ebebeb;
   }
@@ -196,6 +177,7 @@ time, .article_tag {
   .second_section, .third_section {
     margin-bottom: 32px;
   }
+
   .left_article, .center_article, .right_article {
     padding-top: 32px;
     border-top: 1px solid #ebebeb;
@@ -209,23 +191,19 @@ time, .article_tag {
   color: #484848;
 }
 
-
 /* ----- thrid section -------- */
-
-
 /* ------------ footer ------------- */
 .footer_main, .footer_secondary {
-  border-top: 1px solid rgb(235,235,235);
+  border-top: 1px solid rgb(235, 235, 235);
   margin-top: 24px;
   margin-bottom: 48px;
   padding-top: 24px;
-
 }
-
 
 .footerNav h5, .footerNav a {
   font-size: 14px;
 }
+
 .footerNav h5 {
   line-height: 18px;
 }
@@ -240,7 +218,7 @@ time, .article_tag {
 
 @media (max-width: 697px) {
   .footerNav {
-  display: none;
+    display: none;
   }
 }
 
@@ -249,15 +227,16 @@ time, .article_tag {
     flex: 0 0 41.667%;
     max-width: 41.667%;
   }
+
   .col-md-7 {
     flex: 0 0 58.333%;
     max-width: 58.333%;
   }
+
   .footer_disclaimer_mobile {
-  display: none;
+    display: none;
   }
 }
-
 
 .footer_airbnb {
   font-size: 14px;
@@ -267,7 +246,6 @@ time, .article_tag {
   bottom: 5px;
   font-weight: 500;
 }
-
 
 .footer_disclaimer_mobile {
   margin-bottom: 24px;
@@ -279,7 +257,6 @@ time, .article_tag {
 .footer_secondary_socialmedia {
   text-align: right;
   line-height: 1.66667;
-
 }
 
 .footer_secondary_terms {
@@ -288,7 +265,6 @@ time, .article_tag {
   margin: 0 0 0 12px;
   bottom: 8px;
 }
-
 
 .footer_secondary_logo {
   position: relative;
